Create any sized grid with event listeners and basic styling

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,19 @@ main {
 
 .section {
     display: flex;
-    background-color: red;
+
     flex-direction: row;
     flex-wrap: wrap;
+    flex: 1;
+
+}
+
+.article {
+    display: flex;
+    flex: 1;
+
+}
+
+.articleHover {
+    background: black;
 }
