--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,20 @@
 html,
 body {
     min-height: 100vh;
+    width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
+
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding-left: 40px;
+
 }
 
 main {
@@ -14,6 +24,8 @@ main {
     background: lightblue;
     flex-direction: column;
     align-items: stretch;
+    flex-shrink: 0;
+    margin: 40px;
 
 }
 
@@ -34,4 +46,64 @@ main {
 
 .articleHover {
     background: black;
+}
+
+
+
+/* Slider */
+.slidecontainer {
+    width: 100%;
+    /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+    -webkit-appearance: none;
+    /* Override default CSS styles */
+    appearance: none;
+    width: 100%;
+    /* Full-width */
+    height: 25px;
+    /* Specified height */
+    background: #d3d3d3;
+    /* Grey background */
+    outline: none;
+    /* Remove outline */
+    opacity: 0.7;
+    /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s;
+    /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1;
+    /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    /* Override default look */
+    appearance: none;
+    width: 25px;
+    /* Set a specific slider handle width */
+    height: 25px;
+    /* Slider handle height */
+    background: #04AA6D;
+    /* Green background */
+    cursor: pointer;
+    /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    /* Set a specific slider handle width */
+    height: 25px;
+    /* Slider handle height */
+    background: #04AA6D;
+    /* Green background */
+    cursor: pointer;
+    /* Cursor on hover */
 }
